<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bgColor"
    tools:context="com.almabranding.yummi.WelcomeActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_black"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/client_promo_text"
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/welcome_button_text_size"
        android:textColor="@android:color/black"
        android:layout_below="@+id/login_logo" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@android:color/black"
        android:id="@+id/gender"
        android:textSize="@dimen/register_text_size"
        android:layout_marginBottom="-90dp"
        android:textStyle="bold"
       android:layout_above="@+id/triple_choice_layout"

        />

    <LinearLayout
        android:id="@+id/triple_choice_layout"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginBottom="-12dp"
        android:layout_below="@+id/login_logo"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1.5">

        <TextView
            android:id="@+id/choice_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/left_off"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/choice_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:background="@drawable/mid_off"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/choice_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/right_off"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/black" />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/triple_choice_layout"
        android:textSize="@dimen/welcome_button_text_size"
        android:textColor="@android:color/white"
        android:background="@drawable/main_grey_button"
        android:gravity="center"
        android:id="@+id/reg_third_button" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_help"
        android:textColor="@android:color/black"
        android:id="@+id/need_help"
        android:textSize="@dimen/register_text_size"
        android:layout_marginBottom="18dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textColor="@android:color/white"
        android:textSize="@dimen/welcome_button_text_size"
        android:textStyle="bold"
        android:background="@drawable/gold_circle_background"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/need_help"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
